forgot to link js…
💀

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             </div>
             <button id="create">CREATE SEAL</button>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
